Fix a mixin compatibility